--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html {
 
 .stock-tracker-container {
   min-width: 100vw;
-  min-height: calc(100vh);
+  min-height: 100vh;
   resize: both;
   margin: 0;
   padding: 1.5rem;
@@ -16,7 +16,7 @@ html {
   background-image: linear-gradient(127deg, #012861, #021738 69%, #021025);
   border-radius: 0.25rem;
   display: grid;
-  gap: 1.5rem;
+  gap: 1rem 1.5rem;
   grid-template-columns: 2fr 1fr;
   grid-template-areas:
     'logo logo'
